ready for making remote connections

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,6 @@ services:
     #  - postgres-db
     volumes:
       - ./runbooks:/runbooks
+      - ./.ssh:/home/jovyan/.ssh
       - /tmp/data:/data
       
