--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     ports:
       - "8888:8888"
       - "22:22"
+    # environment:
+    #   - DOCKER_STACKS_JUPYTER_CMD=notebook
     volumes:
       - ./runbooks:/runbooks
       - /home/${USER}/.ssh:/home/jovyan/.ssh
